--- a/css/styles.css
+++ b/css/styles.css
@@ -480,17 +480,24 @@ header {
 }
 
 .carousel-indicators [data-bs-target] {
-    width: 10px;
-    height: 10px;
+    width: 12px;
+    height: 12px;
     border-radius: 50%;
     background-color: #869791;
-    margin-inline: 10px;
-
-    &:hover {
-        background-color: #869791;
-    }
+    margin: 0 6px -100px;
+    display: block;
+    opacity: 0.5;
 }
 
+.carousel-indicators [data-bs-target]:hover {
+    background-color: #869791;
+    opacity: 1;
+
+}
+.carousel-indicators .active {
+    background-color: #869791;
+    opacity: 1;
+}
 .carousel-indicators {
 
     bottom: -55px
